fix: Swagger paths
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/api-web/src/main/swagger/paths/BackupResources.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/paths/BackupResources.yaml
@@ -1,5 +1,5 @@
 paths:
-  /stackgres/sgbackup:
+  /stackgres/sgbackups:
     get:
       tags:
       - sgbackup
@@ -48,7 +48,7 @@ paths:
         * sgbackup delete
       security:
       - JWT: []
-  /stackgres/sgbackup/{namespace}/{name}:
+  /stackgres/{namespace}/sgbackups/{name}:
     get:
       tags:
       - sgbackup
