Doc: Added pod node affinity documentation
Signed-off-by: Guilherme Elias <elias@ongres.com>

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
@@ -229,7 +229,8 @@ spec:
                           properties:
                             requiredDuringSchedulingIgnoredDuringExecution:
                               type: object
-                              description: Pod custom node affinity.
+                              description: |
+                                This type of affinity can restrict to only run the pod on specifically nodes like "Intel CPUs"
                               properties:
                                 nodeSelectorTerms:
                                   type: array
