fix: Enpoints path refactor
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -18,7 +18,10 @@ quarkus.native.additional-build-args=\
 # Logger Production
 quarkus.log.level=INFO
 quarkus.log.min-level=TRACE
-quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{10.}] (%t) %s%e%n
+
+quarkus.log.category."org.apache.http".level=INFO
+quarkus.log.category."okhttp3.mockwebserver".level=ERROR
 
 # Logger Development
 %dev.quarkus.log.level=INFO
