--- a/stackgres-k8s/src/api-web/src/main/swagger/paths/PostgresConfigResources.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/paths/PostgresConfigResources.yaml
@@ -48,7 +48,7 @@ paths:
         * sgpgconfigs delete
       security:
       - JWT: []
-  /stackgres/{namespace}/sgpgconfig/{name}:
+  /stackgres/{namespace}/sgpgconfigs/{name}:
     get:
       tags:
       - sgpgconfig
