--- a/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
@@ -24,33 +24,33 @@ spec:
       serviceAccountName: {{ .Release.Name }}-init
       containers:
       - name: "integrate-grafana"
-        image: "janwh/k8s-inithelper:latest"
+        image: "ongres/kubectl:v1.19.7-build-6.3"
         imagePullPolicy: "IfNotPresent"
         command:
           - "/bin/bash"
           - "-ecx"
           - |
             {{- if and .Values.grafana.secretNamespace .Values.grafana.secretName .Values.grafana.secretUserKey .Values.grafana.secretPasswordKey }}
-            grafana_credentials="$(kubectl get secret -n '{{ .Values.grafana.secretNamespace }}' '{{ .Values.grafana.secretName }}' \
+            GRAFANA_CREDENTIALS="$(kubectl get secret -n '{{ .Values.grafana.secretNamespace }}' '{{ .Values.grafana.secretName }}' \
               --template '{{ `{{` }} printf `%s:%s` (index .data `{{ .Values.grafana.secretUserKey }}` | base64decode) (index .data `{{ .Values.grafana.secretPasswordKey }}` | base64decode) {{ `}}` }}' \
               )"
             {{- else }}
-            grafana_credentials="{{ .Values.grafana.user }}:{{ .Values.grafana.password }}"
+            GRAFANA_CREDENTIALS="{{ .Values.grafana.user }}:{{ .Values.grafana.password }}"
             {{- end }}
             {{- if .Values.grafana.webHost }}
-            grafana_host="{{ .Values.grafana.schema }}://{{ .Values.grafana.webHost }}"
+            GRAFANA_HOST="{{ .Values.grafana.schema }}://{{ .Values.grafana.webHost }}"
             {{- else }}
-            grafana_host="{{ .Values.grafana.schema }}://{{ .Release.Name }}-grafana"
+            GRAFANA_HOST="{{ .Values.grafana.schema }}://{{ .Release.Name }}-grafana"
             {{- end }}
-            grafana_prometheus_datasource_name="{{ .Values.grafana.datasourceName }}"
             curl_grafana_api() {
-              curl -vk -H "Accept: application/json" -H "Content-Type: application/json" -u "$grafana_credentials" --fail "$@"
+              curl -svk -H "Accept: application/json" -H "Content-Type: application/json" --user "$GRAFANA_CREDENTIALS" --fail "$@"
             }
             {{- if .Values.grafana.dashboardId }}
-            dashboard_id="{{ .Values.grafana.dashboardId }}"
-            curl_grafana_api "$grafana_host/api/gnet/dashboards/$dashboard_id" | jq .json > /tmp/grafana-dashboard.json
+            DASHBOARD_ID="{{ .Values.grafana.dashboardId }}"
+            curl_grafana_api "$GRAFANA_HOST/api/gnet/dashboards/$DASHBOARD_ID" | jq .json > /tmp/grafana-dashboard.json
             [ -s /tmp/grafana-dashboard.json ]
             {{- end }}
+            GRAFANA_PROMETHEUS_DATASOURCE_NAME="{{ .Values.grafana.datasourceName }}"
             cat << EOF > /tmp/grafana-dashboard-import.json
             {
               {{- if .Values.grafana.dashboardId }}
@@ -63,27 +63,27 @@ spec:
                 "name": "DS_PROMETHEUS",
                 "type": "datasource",
                 "pluginId": "prometheus",
-                "value": "$grafana_prometheus_datasource_name"
+                "value": "$GRAFANA_PROMETHEUS_DATASOURCE_NAME"
               }],
               "folderId": -1
             }
             EOF
-            grafana_dashboard_url="$(curl_grafana_api -X POST -d "@/tmp/grafana-dashboard-import.json" "$grafana_host/api/dashboards/import" | jq -r .importedUrl)"
-            [ -n "$grafana_dashboard_url" ]
-            grafana_api_key_id="$(curl_grafana_api -X GET "$grafana_host/api/auth/keys" | jq -r 'map(select(.name = "stackgres")|.id)|first')"
-            [ -z "$grafana_api_key_id" ] || curl_grafana_api -X DELETE "$grafana_host/api/auth/keys/$grafana_api_key_id" > /dev/null
-            grafana_api_key_token="$(curl_grafana_api -X POST -d '{"name":"stackgres", "role": "Viewer"}' "$grafana_host/api/auth/keys" | jq -r .key)"
-            [ -n "$grafana_api_key_token" ]
+            GRAFANA_DASHBOARD_URL="$(curl_grafana_api -d "@/tmp/grafana-dashboard-import.json" "$GRAFANA_HOST/api/dashboards/import" | jq -M -r .importedUrl)"
+            [ -n "$GRAFANA_DASHBOARD_URL" ]
+            GRAFANA_API_KEY_ID="$(curl_grafana_api "$GRAFANA_HOST/api/auth/keys" | jq -r '.[]|select(.name == "stackgres")|.id|select(.!=null)')"
+            [ -z "$GRAFANA_API_KEY_ID" ] || curl_grafana_api -X DELETE "$GRAFANA_HOST/api/auth/keys/$GRAFANA_API_KEY_ID" > /dev/null
+            GRAFANA_API_KEY_TOKEN="$(curl_grafana_api -d '{"name":"stackgres", "role": "Viewer"}' "$GRAFANA_HOST/api/auth/keys" | jq -r .key)"
+            [ -n "$GRAFANA_API_KEY_TOKEN" ]
             kubectl set env -n {{ .Release.Namespace }} deployment/{{ .Values.restapi.name }} \
               GRAFANA_EMBEDDED=true \
-              GRAFANA_URL_PATH="$grafana_dashboard_url" \
+              GRAFANA_URL_PATH="$GRAFANA_DASHBOARD_URL" \
               GRAFANA_SCHEMA="{{ .Values.grafana.schema }}" \
               {{- if .Values.grafana.webHost }}
               GRAFANA_WEB_HOST="{{ .Values.grafana.webHost }}" \
               {{- else }}
               GRAFANA_WEB_HOST="{{ .Release.Name }}-grafana" \
               {{- end }}
-              GRAFANA_TOKEN="$grafana_api_key_token"
+              GRAFANA_TOKEN="$GRAFANA_API_KEY_TOKEN"
         {{- if not .Values.grafana.dashboardId }}
         volumeMounts:
         - name: grafana-dashboard
