ci: allow to set retry for e2e tests

--- a/.gitlab-ci/test.yml
+++ b/.gitlab-ci/test.yml
@@ -70,6 +70,7 @@ swagger validations:
     IMAGE_TAG_SUFFIX: ""
     E2E_SUFFIX: ""
   timeout: 12 hour
+  retry: $E2E_RETRY
   script:
     - set -e
     - test "$E2E_JOBS" -ge 1 && test "$E2E_JOBS" -le 6
