--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ variables:
   E2E_PARALLELISM: 32
   E2E_JOBS: 3
   E2E_EXCLUSIVE_JOBS: 3
+  E2E_RETRY: 1
   K8S_VERSION: 1.16.15
   K8S_FROM_DIND: "true"
   K8S_REUSE: "true"
