--- a/stackgres-k8s/src/admin-ui/package.json
+++ b/stackgres-k8s/src/admin-ui/package.json
@@ -34,6 +34,7 @@
     "vue-axios": "^3.2.4",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.2.0",
+    "vue-virtual-scroller": "^1.0.10",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
