--- a/stackgres-k8s/src/distributedlogs-controller/pom.xml
+++ b/stackgres-k8s/src/distributedlogs-controller/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>1.0.0-beta2-SNAPSHOT</version>
+    <version>1.0.0-beta2</version>
   </parent>
 
   <artifactId>stackgres-distributedlogs-controller</artifactId>
