--- a/stackgres-k8s/src/jobs/pom.xml
+++ b/stackgres-k8s/src/jobs/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>1.0.0-beta2-SNAPSHOT</version>
+    <version>1.0.0-beta2</version>
   </parent>
 
   <artifactId>stackgres-jobs</artifactId>
