--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -52,18 +52,18 @@ cluster:
     #     preferredDuringSchedulingIgnoredDuringExecution:
     #       - weight:
     #         preference:
-    #           matchExpressions:
-    #           - key:
-    #             operator:
-    #             values:
-    #             - another-value
+    #           - matchExpressions:
+    #             - key:
+    #               operator:
+    #               values:
+    #                 - another-value
     #     requiredDuringSchedulingIgnoredDuringExecution:
     #       nodeSelectorTerms:
     #       - matchExpressions:
     #         - key:
     #           operator:
     #           values:
-    #           - another-value
+    #             - another-value
     #   tolerations:
     #     - key: 
     #       operator: 
