chore: Created e2e mapping statefulset node affinity properties
Signed-off-by: Guilherme Elias <elias@ongres.com>

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
@@ -156,6 +156,7 @@ spec:
       {{- if .Values.cluster.pods.scheduling.nodeAffinity }}
       nodeAffinity:
         {{- if .Values.cluster.pods.scheduling.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution }}
+        #{{ .Values.cluster.pods.scheduling.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution | quote }}
         requiredDuringSchedulingIgnoredDuringExecution:
           {{- if .Values.cluster.pods.scheduling.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution.nodeSelectorTerms }}
           nodeSelectorTerms:
@@ -179,21 +180,22 @@ spec:
         {{- if .Values.cluster.pods.scheduling.nodeAffinity.preferredDuringSchedulingIgnoredDuringExecution }}
         preferredDuringSchedulingIgnoredDuringExecution:
           {{- range .Values.cluster.pods.scheduling.nodeAffinity.preferredDuringSchedulingIgnoredDuringExecution }}
-          - weigth: {{ .weight }}
             {{- if .preference }}
-            preference:
-              {{- if .matchExpressions }}
-              matchExpressions:
-                {{- range .matchExpressions }}
-                - key: {{ .key }}
-                  operator: {{ .operator }}
-                  {{- if .values }}
-                  values:
-                    {{-  range .values }}
-                    - {{ . }}
+            - weight: {{ .weight }}
+              #{{ .preference | quote }}    
+              preference:
+              {{- if .preference.matchExpressions }}
+                matchExpressions:
+                  {{- range .preference.matchExpressions }}
+                  - key: {{ .key }}
+                    operator: {{ .operator }}
+                    {{- if .values }}
+                    values:
+                      {{-  range .values }}
+                      - {{ . }}
+                      {{- end }}
                     {{- end }}
                   {{- end }}
-                {{- end }}
               {{- end }}
             {{- end }}
           {{- end }}
