fix: Prefix namespaced resources with namespaces
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/api-web/src/main/swagger/paths/BackupConfigResources.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/paths/BackupConfigResources.yaml
@@ -61,7 +61,7 @@ paths:
         * secrets get, delete
       security:
       - JWT: []
-  /stackgres/{namespace}/sgbackupconfigs/{name}:
+  /stackgres/namespaces/{namespace}/sgbackupconfigs/{name}:
     get:
       tags:
       - sgbackupconfig
