--- a/stackgres-k8s/src/api-web/src/main/swagger/paths/BackupResources.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/paths/BackupResources.yaml
@@ -48,7 +48,7 @@ paths:
         * sgbackup delete
       security:
       - JWT: []
-  /stackgres/{namespace}/sgbackups/{name}:
+  /stackgres/namespaces/{namespace}/sgbackups/{name}:
     get:
       tags:
       - sgbackup
