--- a/stackgres-k8s/src/api-web/src/main/swagger/paths/DbOpsResources.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/paths/DbOpsResources.yaml
@@ -48,7 +48,7 @@ paths:
         * sgdbops delete
       security:
       - JWT: []
-  /stackgres/{namespace}/sgdbops/{name}:
+  /stackgres/namespaces/{namespace}/sgdbops/{name}:
     get:
       tags:
       - sgdbops
