--- a/stackgres-k8s/src/api-web/src/main/swagger/paths/ProfileResources.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/paths/ProfileResources.yaml
@@ -48,7 +48,7 @@ paths:
         * sginstanceprofiles delete
       security:
       - JWT: []
-  /stackgres/{namespace}/sginstanceprofiles/{name}:
+  /stackgres/namespaces/{namespace}/sginstanceprofiles/{name}:
     get:
       tags:
       - sginstanceprofile
