fix: add JAVA_OPTS for developer.extraOpts in operator helm chart

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
@@ -61,6 +61,10 @@ spec:
           - name: APP_OPTS
             value: '{{ range .Values.developer.extraOpts }}{{ . }} {{ end }}'
           {{- end }}
+          {{- if .Values.developer.extraOpts }}
+          - name: JAVA_OPTS
+            value: '{{ range .Values.developer.extraOpts }}{{ . }} {{ end }}'
+          {{- end }}
           {{- if .Values.developer.enableJvmDebug }}
           - name: DEBUG_OPERATOR
             value: "{{ .Values.developer.enableJvmDebug }}"
