--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -93,6 +93,7 @@
     <swagger-annotations.version>2.1.9</swagger-annotations.version>
     <reflections.version>0.9.12</reflections.version>
     <truth.version>1.1.3</truth.version>
+    <jsonassert.version>1.5.0</jsonassert.version>
     <!-- Plugins versions -->
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <jar-plugin.version>3.2.0</jar-plugin.version>
@@ -215,6 +216,11 @@
         <artifactId>truth-java8-extension</artifactId>
         <version>${truth.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.skyscreamer</groupId>
+        <artifactId>jsonassert</artifactId>
+        <version>${jsonassert.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
