--- a/stackgres-k8s/src/test-util/pom.xml
+++ b/stackgres-k8s/src/test-util/pom.xml
@@ -50,6 +50,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-test-kubernetes-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
