feat: Installing extensions for newly created clusters create the extra mounts

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGDistributedLogs.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGDistributedLogs.yaml
@@ -155,7 +155,7 @@ spec:
                       type:
                         description: Type of deployment condition.
                         type: string
-                toInstallPostgresExtensions:
+                postgresExtensions:
                   type: array
                   description: The list of Postgres extensions to install.
                   items:
