fix: SGPoolingConfig CRD additional properties
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGPoolingConfig.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGPoolingConfig.yaml
@@ -49,7 +49,24 @@ spec:
                     databases:
                       type: object
                       additionalProperties:
-                        type: string
+                        type: object
+                        properties:
+                          dbname:
+                            type: string
+                          pool_size:
+                            type: integer
+                          reserve_pool:
+                            type: integer
+                          pool_mode:
+                            type: string
+                          max_db_connections:
+                            type: integer
+                          client_encoding:
+                            type: string
+                          datestyle:
+                            type: string
+                          timezone:
+                            type: string
                       description: |
                         The `pgbouncer.ini` (Section [databases]) parameters the configuration contains, represented as an object where the keys are valid names for the `pgbouncer.ini` configuration file parameters.
 
@@ -57,7 +74,12 @@ spec:
                     users:
                       type: object
                       additionalProperties:
-                        type: string
+                        type: object
+                        properties:
+                          pool_mode:
+                            type: string
+                          max_user_connections:
+                            type: integer
                       description: |
                         The `pgbouncer.ini` (Section [users]) parameters the configuration contains, represented as an object where the keys are valid names for the `pgbouncer.ini` configuration file parameters.
 
