fix: Add transformation for new pgbouncer.ini
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/api-web/pom.xml
+++ b/stackgres-k8s/src/api-web/pom.xml
@@ -117,6 +117,10 @@
       <artifactId>quarkus-test-kubernetes-client</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-configuration2</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
