--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -94,6 +94,7 @@
     <reflections.version>0.9.12</reflections.version>
     <truth.version>1.1.3</truth.version>
     <jsonassert.version>1.5.0</jsonassert.version>
+    <commons-configuration2.version>2.7</commons-configuration2.version>
     <!-- Plugins versions -->
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <jar-plugin.version>3.2.0</jar-plugin.version>
@@ -221,6 +222,11 @@
         <groupId>org.skyscreamer</groupId>
         <artifactId>jsonassert</artifactId>
         <version>${jsonassert.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-configuration2</artifactId>
+        <version>${commons-configuration2.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
