--- a/stackgres-k8s/install/helm/stackgres-operator/templates/validating-webhook-configuration.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/validating-webhook-configuration.yaml
@@ -18,7 +18,7 @@ webhooks:
       - operations: ["CREATE", "UPDATE"]
         apiGroups: ["stackgres.io"]
         apiVersions: ["*"]
-        resources: ["sgclusters", "sgclusters/*"]
+        resources: ["sgclusters"]
     failurePolicy: Fail
     clientConfig:
       service:
@@ -120,7 +120,7 @@ webhooks:
       - operations: ["CREATE", "UPDATE", "DELETE"]
         apiGroups: ["stackgres.io"]
         apiVersions: ["*"]
-        resources: ["sgdistributedlogs", "sgdistributedlogs/*"]
+        resources: ["sgdistributedlogs"]
     failurePolicy: Fail
     clientConfig:
       service:
