--- a/stackgres-k8s/src/common/src/main/resources/crds/SGDistributedLogs.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGDistributedLogs.yaml
@@ -124,6 +124,37 @@ spec:
                           description: Annotations to attach to services created or managed by StackGres.
                           additionalProperties:
                             type: string
+                toInstallPostgresExtensions:
+                  type: array
+                  description: The list of Postgres extensions to install.
+                  items:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        description: The name of the extension to install.
+                      publisher:
+                        type: string
+                        description: The id of the publisher of the extension to install.
+                      version:
+                        type: string
+                        description: The version of the extension to install.
+                      repository:
+                        type: string
+                        description: The repository base URL from where the extension will be installed from.
+                      postgresVersion:
+                        type: string
+                        description: The postgres major version of the extension to install.
+                      build:
+                        type: string
+                        description: The build version of the extension to install.
+                      extraMounts:
+                        type: array
+                        description: The extra mounts of the extension to install.
+                        items:
+                          type: string
+                          description: The extra mount of the installed extension.
+                    required: ["name", "publisher", "version", "repository", "postgresVersion"]
                 nonProductionOptions:
                   type: object
                   properties:
@@ -157,37 +188,6 @@ spec:
                       type:
                         description: Type of deployment condition.
                         type: string
-                postgresExtensions:
-                  type: array
-                  description: The list of Postgres extensions to install.
-                  items:
-                    type: object
-                    properties:
-                      name:
-                        type: string
-                        description: The name of the extension to install.
-                      publisher:
-                        type: string
-                        description: The id of the publisher of the extension to install.
-                      version:
-                        type: string
-                        description: The version of the extension to install.
-                      repository:
-                        type: string
-                        description: The repository base URL from where the extension will be installed from.
-                      postgresVersion:
-                        type: string
-                        description: The postgres major version of the extension to install.
-                      build:
-                        type: string
-                        description: The build version of the extension to install.
-                      extraMounts:
-                        type: array
-                        description: The extra mounts of the extension to install.
-                        items:
-                          type: string
-                          description: The extra mount of the installed extension.
-                    required: ["name", "publisher", "version", "repository", "postgresVersion"]
                 podStatuses:
                   type: array
                   description: The list of pod statuses.
