--- a/stackgres-k8s/src/common/src/main/resources/versions.properties
+++ b/stackgres-k8s/src/common/src/main/resources/versions.properties
@@ -3,6 +3,6 @@ prometheus-postgres-exporter=0.9.0-build-6.2
 postgresql=12.1-build-6.2,12.2-build-6.2,12.3-build-6.2,12.4-build-6.2,12.5-build-6.2,12.6-build-6.2,13.0-build-6.2,13.1-build-6.2,13.2-build-6.2
 envoy=1.17.1-build-6.2
 pgbouncer=1.15.0-build-6.2
-fluentbit=1.7.5-build-6.3
+fluentbit=1.8.1-build-6.4-dev
 fluentd=1.12.1-build-6.2
 kubectl=1.19.7-build-6.2
